k8s/zabbix/zabbix-agent/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-agent
  labels:
    app: zabbix-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-agent
  template:
    metadata:
      labels:
        app: zabbix-agent
    spec:
      containers:
      - name: zabbix-agent
        image: zabbix/zabbix-agent:latest
        volumeMounts:
        - name: zabbix-config
          mountPath: /etc/zabbix/zabbix_agentd.conf
          subPath: zabbix_agentd.conf
        - name: zabbix-logs
          mountPath: /var/log/zabbix
        - name: zabbix-run
          mountPath: /var/run/zabbix
        securityContext:
          privileged: true
      volumes:
      - name: zabbix-config
        configMap:
          name: zabbix-agent-config
      - name: zabbix-logs
        emptyDir: {}
      - name: zabbix-run
        emptyDir: {}
