k8s/zabbix/zabbix-agent/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: zabbix-agent-service
spec:
  type: ClusterIP
  selector:
    app: zabbix-agent
  ports: 
    - port: 10050
      targetPort: 10050
