k8s/zabbix/zabbix-agent/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zabbix-agent-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: zabbix-agent-service
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: zabbix-server
    ports:
    - protocol: TCP
      port: 10050
